[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlactive_daireto"
dynamic = ["version", "dependencies"]
authors = [
    { name="Dairo Mosquera", email="dairoandres115@outlook.com" },
]
description = "A sleek, powerful and asynchronous ActiveRecord-style wrapper for SQLAlchemy. Bring Django-like queries, automatic timestamps, nested eager loading, and dictionary serialization for SQLAlchemy models."
readme = "README.md"
requires-python = ">=3.10"
keywords=[
    "sqlalchemy",
    "active record",
    "activerecord",
    "orm",
    "django-like",
    "django queries",
    "eager load",
    "timestamps",
    "serialization",
    "sqlite",
    "postgresql",
    "mysql",
    "mariadb",
    "pymysql",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
]

[project.urls]
homepage = "https://github.com/Daireto/sqlactive"
source = "https://github.com/Daireto/sqlactive"
documentation = "https://github.com/Daireto/sqlactive/blob/main/docs/MAIN.md"
issues = "https://github.com/Daireto/sqlactive/issues"

[tool.setuptools.dynamic]
version = {attr = "sqlactive_daireto.__version__"}
dependencies = {file = "requirements.txt"}
